--- a/index.html
+++ b/index.html
@@ -10,16 +10,48 @@
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script src="script.js"></script>	
 	<link rel="stylesheet" type="text/css" href="style.css" />
-	<title>Windows Template</title>
+	<title>MacOS Webjave</title>
 </head>
 <body>
 	<div id="desktop">
 		<div class="thebar">
-			<div class="apple">
+			<div class="apple" id="barslot-1">
 				<img src="apple.png" class="logo">
 			</div>
+
+			<div class="dropdown" id="appledropdown">
+				<li href="https://google.com/">or did you not</li>
+			</div>
+
+			<div class="baropts" id="barslot0">
+				<h3 id="programname">Finder</h3>
+			</div>
+
+			<div class="dropdown" id="finder">
+				<li href="https://google.com/">did you find it yet</li>
+			</div>
+
+
+			<div class="baropts" id="barslot1">
+				File
+			</div>
+			<div class="baropts" id="barslot2">
+				Edit
+			</div>
+			<div class="baropts" id="barslot3">
+				View
+			</div>
+			<div class="baropts" id="barslot4">
+				Go
+			</div>
+			<div class="baropts" id="barslot5">
+				Window
+			</div>
+			<div class="baropts" id="barslot6">
+				Help
+			</div>
 		</div>
-		<div class="window closed" data-title="" max="hidden"  icon="warn.png" min="hidden" close="hidden">
+		<div class="window closed" hidetitle="none" data-title="Error" max="hidden"  icon="warn.png" min="hidden" close="hidden">
 			<img src="warn.png" class="warnico">
 			<h4 class="warntext">Photoshop quit as expected.</h4>
 			<p class="warndesc">Click reopen to open the application again, Click Report<br>to see a more detailed report and send a report to<br>dragonie.fun.</p>
@@ -30,10 +62,23 @@
 			</div>
 		</div>
 
-		<div class="window" allowresize="yes" data-title="This is a name" insideborders="none"  icon="finder.png">
-			<p>Content</p>
-			<p>You must not have any open windows for production</p>
-		<a href="https://html5-templates.com/" rel="nofollow" target="_blank">&copy; HTML5-Templates.com</a>	
+		<div class="window" allowresize="yes" data-title="Known bugs" insideborders="none"  icon="flushed.png">
+			Notable issues:
+			<br><br>
+			<p>
+				- Animations not finished<br>
+				- Top bar is hover not click for dropdown (fixing never)<br>
+				- Download folder and bin not finished<br>
+				- Finish taskbar!!<br>
+				- vix: make sure to keep all programs closed on launch cause of bounce bug<br>
+			</p>
+			<br><p>ACKNOWLEDGEMENTS</p>
+		<a href="https://html5-templates.com/" rel="nofollow" target="_blank">Windows framework</a>	
+		</div>
+
+		
+		<div class="window" allowresize="yes" data-title="title1" insideborders="none"  icon="coneskin.png">
+			<p>oh sa sa le le</p>
 		</div>
 
 		<div class="bar">		
@@ -46,10 +91,9 @@
 		</div>
 		
 		<div id="icons">
-			<a class="openWindow" data-id="0">Open first</a>
-			<a class="openWindow" data-id="1">Open second</a>
-			<a class="openWindow" data-id="2">Open third</a>
-			<a class="openWindow" data-id="3">Welcome screen</a>
+			<a class="openWindow" data-id="0">error</a>
+			<a class="openWindow" data-id="1">finder</a>
+			<a class="openWindow" data-id="2">title1</a>
 		</div>
 		<!-- You can use this template freely if you leave a visible link to HTML5-Templates.com -->
 	</div>
