--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</div>
 
 			<div class="dropdown" id="appledropdown">
-				<li href="https://google.com/">or did you not</li>
+				<a class="openWindow" data-id="3"><li>About this Mac</li></a>
 			</div>
 
 			<div class="baropts" id="barslot0">
@@ -62,28 +62,34 @@
 			</div>
 		</div>
 
-		<div class="window" allowresize="yes" data-title="Known bugs" insideborders="none"  icon="flushed.png">
+		<div class="window closed" allowresize="yes" data-title="Known bugs" insideborders="none"  icon="flushed.png">
 			Notable issues:
 			<br><br>
 			<p>
 				- Animations not finished<br>
 				- Top bar is hover not click for dropdown (fixing never)<br>
 				- Download folder and bin not finished<br>
+				- Full screen isnt 100% accurate but does the job i guess<br>
+				- removed traffic light options are gone instead of gray (might not fix)<br>
 				- Finish taskbar!!<br>
 				- vix: make sure to keep all programs closed on launch cause of bounce bug<br>
 			</p>
 			<br><p>ACKNOWLEDGEMENTS</p>
 		<a href="https://html5-templates.com/" rel="nofollow" target="_blank">Windows framework</a>	
 		</div>
-
 		
-		<div class="window" allowresize="yes" data-title="title1" insideborders="none"  icon="coneskin.png">
+		<div class="window closed" allowresize="yes" data-title="title1" insideborders="none"  icon="coneskin.png">
 			<p>oh sa sa le le</p>
+		</div>
+
+		<div class="window" hidetitle="none"  max="hidden" data-title="About this Mac" insideborders="none"  icon="finder.png">
+			This is not a mac.
 		</div>
 
 		<div class="bar">		
 			<div id="taskbar">		
 					
+			<a href="https://github.com/vixenowo/webjave" target="_blank"><div class="bin" title="GitHub"><img src="github.png" id="taskicon" class="taskbarico"></div></a>
 			<div class="bin" title="Trash"><img src="bin.png" id="taskicon" class="taskbarico"></div>
 			<div class="bin" title="Downloads"><img src="folder.png" id="taskicon" class="taskbarico"></div>
 			<div class="hr"></div>
